Sun beams node prevents to move the node #73212

Closed
opened 2020-01-18 11:09:06 +01:00 by Patrice · 12 comments

System Information
Operating system: Linux Fedora 31
Graphics card: Intel

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen): commit 5472ae6fdf (and probably earlier version)

Short description of error
In compositor, adding a Sun Beams node doesn't allow to move it with mouse. We can only use "grab" action (G key)

Exact steps for others to reproduce the error

  • Make a render of default cube
  • Go to compositor tab
  • Add a viewer
  • Connect sun beams node between Render Layers and Viewer
  • Try to move the sun beam node

Actually, mouse is locked to change the sun beams position as soon as the node is selected. I understand that we need to double-click on others nodes to select them and leave sun beam position action, but it doesn't work with the sun beam itself :)
The only way to move it is to click on sun beam node and to use "grab" (G key)

Thanks

**System Information** Operating system: Linux Fedora 31 Graphics card: Intel **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen): commit 5472ae6fdff (and probably earlier version) **Short description of error** In compositor, adding a Sun Beams node doesn't allow to move it with mouse. We can only use "grab" action (G key) **Exact steps for others to reproduce the error** - Make a render of default cube - Go to compositor tab - Add a viewer - Connect sun beams node between Render Layers and Viewer - Try to move the sun beam node Actually, mouse is locked to change the sun beams position as soon as the node is selected. I understand that we need to double-click on others nodes to select them and leave sun beam position action, but it doesn't work with the sun beam itself :) The only way to move it is to click on sun beam node and to use "grab" (G key) Thanks
Author

Added subscriber: @Metal3d

Added subscriber: @Metal3d
Author

Note that we can:

  • leave sun beams node by double-cliking on another node
  • then make a box selection on the sun beams node
  • and now, we can move it with the mouse
Note that we can: - leave sun beams node by double-cliking on another node - then make a box selection on the sun beams node - and now, we can move it with the mouse
Patrice changed title from Sun beams node prevents to smove the node to Sun beams node prevents to move the node 2020-01-18 11:16:29 +01:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Double clicking doesn't work for me

Double clicking doesn't work for me
Member

Added subscribers: @ideasman42, @JacquesLucke

Added subscribers: @ideasman42, @JacquesLucke
Member

@ideasman42, is it intentional that gizmos access process events before node selection etc. is done?

2020-03-04 14-44-34.mkv

@ideasman42, is it intentional that gizmos access process events before node selection etc. is done? [2020-03-04 14-44-34.mkv](https://archive.blender.org/developer/F8387941/2020-03-04_14-44-34.mkv)

Added subscriber: @rocketman

Added subscriber: @rocketman

I can confirm this. The Sun Beams node seems to hijack the LMB; any click is used to set the Sun Beam position, but the user can't do anything else. This only occurs when backdrop is enabled.

I can confirm this. The Sun Beams node seems to hijack the LMB; any click is used to set the Sun Beam position, but the user can't do anything else. This only occurs when backdrop is enabled.

@JacquesLucke, no, it's not inteded, I think this is a TODO from early 2.8x that slipped through the cracks.

@JacquesLucke, no, it's not inteded, I think this is a TODO from early 2.8x that slipped through the cracks.
Campbell Barton self-assigned this 2020-03-11 12:26:39 +01:00

This issue was referenced by 5929dd7129

This issue was referenced by 5929dd7129f6e8d41a79a5e01dd8b18f5369d1a8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73212
No description provided.