Fix T73212: Gizmo's are still interactive when behind nodes